# mid-360-camera-collision-detection

./: .gitignore  README.md  warning_pipeline_flowchart_2026-03-30.md
doc/: dagang.txt  dynamic_point_detection_workflow_2026-01-23.md  imu_leveling_export_2026-01-21.md  lio_sam_body_leveled_map_semantics_2026-04-08.md  m_detector_near_field_roi_runtime_validation_2026-04-09.md  pixel_pointcloud_projection_workflow_2026-03-22.md  ptp_dual_lidar_validation_2026-03-24.md  ptp_time_sync_summary_2026-03-11.md  refined_outline_ch4_ch6.md  ros_topic_framework_car-dynamic-hook-dynamic-1_20260309.md  static_warning_evolution.md  static_warning_kdtree_optimization.md  tf_tree_run_launch_2026-03-23.md  warning_control_interface_impl_2026-03-29.md  warning_pipeline_impl_2026-03-29.md  yolo26_custom_engine_integration_2026-04-15.md  yolo_training_env_snapshot_2026-04-15.md  静态预警效果测试_操作手册.md
scripts/: README_CHECK_PTP.md  check_jetson_inference_install.sh  check_ptp.sh  check_warning_continuity.py  decompress_bag_image_topics.py  eval_static_warning.py  evaluate_selected_points.py  export_bag_prediction.py  extract_bag_images_interval.py  extract_pointcloud_frame.py  measure_bw.py  measure_bw.sh  plot_warning_timeline.py  (+2 more)
src/LIO-SAM-MID360/: CMakeLists.txt  package.xml
src/LIO-SAM-MID360/config/: cylinder_object_source.yaml  dynamic_tracker.yaml  params.yaml  params9axisIMU.yaml  paramsLivoxIMU.yaml  paramsLivoxIMU_1.yaml  static_cloud_self_filter.yaml  visual_object_selector.yaml  warning_controller.yaml  warning_evaluator.yaml
src/LIO-SAM-MID360/include/: utility.h
src/LIO-SAM-MID360/launch/: cylinder_object_source.launch  dynamic_tracker.launch  run6axis.launch  visual_object_selector.launch  warning_controller.launch  warning_evaluator.launch
src/LIO-SAM-MID360/launch/include/: module_loam.launch
src/LIO-SAM-MID360/launch/include/config/: rviz.rviz
src/LIO-SAM-MID360/msg/: ControlCommand.msg  DynamicTrack.msg  DynamicTrackArray.msg  SegmentedObjectState.msg  SegmentedObjectStateArray.msg  WarningState.msg
src/LIO-SAM-MID360/src/: cylinderObjectSource.cpp  dynamicTracker.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  staticCloudSelfFilter.cpp  visualObjectSelector.cpp  warningController.cpp  warningEvaluator.cpp
src/Livox_merge/: CMakeLists.txt  confirm_euler_angle.py  diagnose_transform.py  package.xml
src/Livox_merge/config/: livox_merge_config.yaml  livox_merge_config_25degree.yaml
src/Livox_merge/launch/: livox_merge.launch  merged_pointcloud_leveler.launch
src/Livox_merge/rviz/: livox_merge.rviz
src/Livox_merge/scripts/: test_imu_time_order.py
src/Livox_merge/src/: MergeLidar.cpp  merged_pointcloud_leveler_node.cpp
src/M-detector/: CMakeLists.txt  package.xml
src/M-detector/config/: dyn_cluster.yaml
src/M-detector/config/mid360/: mid360.yaml
src/M-detector/include/m-detector/: DynObjFilter.h
src/M-detector/launch/: cal_recall.launch  detector_mid360.launch  detector_mid360_lio_sam.launch  display.launch
src/M-detector/rviz/: demo.rviz
src/M-detector/src/: DynObjCluster.cpp  DynObjFilter.cpp  dyn_cluster_node.cpp  dynfilter_with_odom.cpp  pointcloud_roi_filter.cpp  pointcloud_tf_bridge.cpp
src/hikrobot_camera/: CMakeLists.txt  README.md  package.xml
src/hikrobot_camera/config/: camera-indoor.yaml  camera-outdoor.yaml  camera.yaml  camera_frame_transform.yaml
src/hikrobot_camera/include/: hikrobot_camera.hpp
src/hikrobot_camera/launch/: camera_frame_transform.launch  camera_lidar_alignment_audit.launch  hikrobot_camera.launch  hikrobot_camera_indoor.launch  hikrobot_camera_outdoor.launch  indoor_data_collection.launch
src/hikrobot_camera/rviz_config/: hikrobot.rviz
src/hikrobot_camera/scripts/: check_camera_lidar_alignment.py
src/hikrobot_camera/src/: camera_frame_transform_node.cpp  hikrobot_camera.cpp
src/jetson_vision_detect/: CMakeLists.txt  package.xml
src/jetson_vision_detect/launch/: detect_track_from_bag.launch
src/jetson_vision_detect/msg/: TrackedDetection2D.msg  TrackedDetections2D.msg
src/jetson_vision_detect/scripts/: detect_track_node.py
src/system_bringup/: CMakeLists.txt  package.xml
src/system_bringup/launch/: (deprecated)collect_data_with_ptp.launch  (deprecated)run_cylinder_warning.launch  (deprecated)run_live.launch  1_run_static_warning.launch  2_run_dynamic_warning.launch  collect_data.launch  ptp_sync.launch  run.launch  run_cylinder_warning.launch  run_dynamic_detector.launch  run_live.launch  run_no_object.launch  run_raw.launch  run_save_image.launch  run_segment.launch  run_segment_yolo11.launch  run_segment_yolo26.launch  run_with_vision.launch  temp.launch  temp_run.launch  test_segment_run.launch  说明.txt
src/system_bringup/rviz/: static_warning.rviz  system_bringup.rviz  system_bringup_compressed.rviz  system_bringup_cylinder_warning.rviz  system_bringup_temp.rviz  temp.rviz
src/system_bringup/scripts/: adjust_bag_exposure.py  export_bag_prediction_wrapper.py  img_exetract_with_time.py  ptp_time_sync.sh  topic_image_timestamp_saver.py
src/yolo11_ros/: ---CMakeLists.txt  CMakeLists.txt  README.md  package.xml
src/yolo11_ros/TensorRT-YOLO11/C++/detect/include/: infer.h
src/yolo11_ros/TensorRT-YOLO11/C++/detect/src/: infer.cpp
src/yolo11_ros/TensorRT-YOLO11/C++/pose/include/: infer.h
src/yolo11_ros/TensorRT-YOLO11/C++/pose/src/: infer.cpp
src/yolo11_ros/TensorRT-YOLO11/C++/segment/include/: infer.h
src/yolo11_ros/TensorRT-YOLO11/C++/segment/src/: infer.cpp
src/yolo11_ros/launch/: detect.launch  pose.launch  segment.launch
src/yolo11_ros/scripts/: export-det.py  export-pose.py  export-seg.py  gen_pkl.py
src/yolo11_ros/src_ros/: detect.cpp  pose.cpp  realtime_demo_monitor.py  realtime_demo_monitor_with_risk.py  segment.cpp
src/yolo26_ros/: CMakeLists.txt  README.md  package.xml
src/yolo26_ros/config/: segment_projection.yaml
src/yolo26_ros/include/: infer.h
src/yolo26_ros/launch/: detect.launch  pose.launch  segment.launch
src/yolo26_ros/scripts/: save_colored_pointcloud.py
src/yolo26_ros/src_ros/: detect.cpp  pose.cpp  segment.cpp
(+24 files in other folders)
