<?xml version="1.0"?>
<package format="2">
  <name>system_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch and utility resources for Livox, YOLO11, and rosbag bringup workflows.</description>

  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>hikrobot_camera</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>lio_sam</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>livox_merge</exec_depend>
  <exec_depend>m_detector</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>yolo11_ros</exec_depend>

  <export>
  </export>
</package>
 
